...
                android:layout_marginBottom="15dp"
                android:letterSpacing="0.05"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnCerrarEasterEggContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#F2FFFFFF"
...
